css: Fix voted user avatar verticatl alignment

--- a/app/assets/stylesheets/less/_yobiUI.less
+++ b/app/assets/stylesheets/less/_yobiUI.less
@@ -1136,7 +1136,7 @@ span.issue-label {
     border:0;
     outline:none;
     font-size:0;
-    line-height:20px;
+    line-height:normal;
 }
 
 .numberic {
